kafka consumer code improvements

--- a/kafka-messenger-backend/src/main/resources/application.properties
+++ b/kafka-messenger-backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.kafka.bootstrap-servers=172.19.130.85:9092
+spring.kafka.groupId=test-consumer-group
+spring.kafka.topic=messenger
 
 server.port=9090
 
