backend break point 2

--- a/kafka-messenger-backend/src/main/resources/application.properties
+++ b/kafka-messenger-backend/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.kafka.topic=messenger
 server.port=9090
 
 springdoc.swagger-ui.path=/kafka-messenger.html
+
+jwt.secret=hK8U9c/fpxvwJotkz8V7jmKLHcooRW8kSF8T/t+HwDM=
