--- a/kafka-messenger-backend/src/main/resources/application.properties
+++ b/kafka-messenger-backend/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=9090
 springdoc.swagger-ui.path=/kafka-messenger.html
 
 jwt.secret=hK8U9c/fpxvwJotkz8V7jmKLHcooRW8kSF8T/t+HwDM=
+
+users.xmlFilePath=src/main/resources/users.xml
